--- a/KHDL_CK/cleandata_ck.ipynb
+++ b/KHDL_CK/cleandata_ck.ipynb
@@ -52,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_at8kqO7G3DA",
-        "outputId": "9c4b5b0a-0def-4427-b95e-7dd098bb217f"
+        "outputId": "dbfd97a8-322d-4516-9664-e3b54a7c7d5d"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zy3LCOZ6WAoC",
-        "outputId": "2424c1bc-3b05-4e07-b9e4-c99f92f43021"
+        "outputId": "98a59e2c-467e-43ba-b87c-a4ee25159166"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,9 +144,9 @@
           "height": 644
         },
         "id": "BOXSEVZjKMRi",
-        "outputId": "93cb7f3d-d8ef-498e-d611-23c5fabbf56c"
+        "outputId": "37517188-ebdf-4a46-a04b-4f7ec4a0601e"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +156,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -192,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yq4eMrsaLFfS",
-        "outputId": "0ae1e605-5183-4bfc-bca4-41312568fa7a"
+        "outputId": "26c2b7e8-c71b-4ae7-8a4a-f3f49cc45ea3"
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
       "metadata": {
         "id": "TwUqGdjbLenD"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -259,9 +259,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0020b46e-b148-4e22-c6a7-55a5450ac8c6"
+        "outputId": "a528f39d-ae7d-48bf-a185-2ff7adeefe11"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,9 +294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E6HfPsOQVMUR",
-        "outputId": "225673d2-b667-43ec-a7da-25b5b9af29c3"
+        "outputId": "326aef00-2bf0-4364-f7af-6abbe5631d80"
       },
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
       "metadata": {
         "id": "2qP6JBWuV-BX"
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -365,9 +365,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aba2fdc3-6627-4957-bf78-9c02f289e6d2"
+        "outputId": "46bd53ce-11da-49ee-84d5-95afc1efdf32"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "clrqGkQfbgLK",
-        "outputId": "b9b4a7d7-7ba5-4f53-fa7a-99170f2209e4"
+        "outputId": "f586a03a-93bf-486d-efe5-7ae866ce4832"
       },
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
       "metadata": {
         "id": "hsu2E_ymbvcC"
       },
-      "execution_count": 24,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -462,9 +462,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e44c8f84-f837-42b6-c07d-74d934bb09b7"
+        "outputId": "01c5a201-d9b3-4857-98d2-f2dac790c063"
       },
-      "execution_count": 25,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,9 +497,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jfls7L70rJJT",
-        "outputId": "7dad6c3e-71db-4ce9-fef4-df09d2395d30"
+        "outputId": "a47459c7-1ac4-4367-f873-19c9dc35b92e"
       },
-      "execution_count": 26,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
       "metadata": {
         "id": "hmRVHoA7ngyX"
       },
-      "execution_count": 27,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -560,9 +560,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bHWDLnv0Aba",
-        "outputId": "b94d2504-236e-435e-e534-763341090bb9"
+        "outputId": "f0e7b890-933e-4fc7-c297-81964298bb62"
       },
-      "execution_count": 28,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,9 +595,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bu-j89gx8N5-",
-        "outputId": "dbf3316d-4d5d-4349-97ce-827fc387a1ac"
+        "outputId": "6b59c195-3332-4257-a52b-ab9ece6f7ac9"
       },
-      "execution_count": 29,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +642,7 @@
       "metadata": {
         "id": "WLI9rZlG8jjf"
       },
-      "execution_count": 30,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -655,9 +655,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b9a45b8-44fe-4ece-eaa3-c8342f385574"
+        "outputId": "2216694f-3a61-4fe3-f42e-0d4f133dde9e"
       },
-      "execution_count": 31,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,9 +690,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T7GltrFA_akM",
-        "outputId": "6138842c-7e93-4b2b-8672-100790521785"
+        "outputId": "991df7e0-ddce-4dfc-a398-2be98ef08df1"
       },
-      "execution_count": 32,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +734,7 @@
       "metadata": {
         "id": "TV7uutEC_szW"
       },
-      "execution_count": 33,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -747,9 +747,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43ec1131-345b-4f87-80e4-81c311c7980f"
+        "outputId": "1dbd8039-fb3b-4013-8abf-bf389f733a50"
       },
-      "execution_count": 34,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,9 +782,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BauYcI9cCQsu",
-        "outputId": "e77758cc-6f56-42f9-dbd9-b6d718a74828"
+        "outputId": "432fa961-aa70-400a-86f6-f29675d57a8d"
       },
-      "execution_count": 35,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +830,7 @@
       "metadata": {
         "id": "LeeMxNHaCnOC"
       },
-      "execution_count": 36,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -843,9 +843,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2c446660-fc5a-47aa-cd33-870c3039429b"
+        "outputId": "c68c4a9a-ade0-4cfc-cfa3-1bbdb81baab5"
       },
-      "execution_count": 37,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,9 +878,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X2q_sraKEQ4M",
-        "outputId": "c797325e-6908-4a00-da5d-a884548d662a"
+        "outputId": "fdfadf2f-2a93-4f55-cb4b-4bf970c0fb59"
       },
-      "execution_count": 38,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +916,7 @@
       "metadata": {
         "id": "MYojUNoUyJPC"
       },
-      "execution_count": 39,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
       "metadata": {
         "id": "8ODJxWdQEfIG"
       },
-      "execution_count": 40,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -945,9 +945,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0dbfd7e2-fc20-4f9e-de48-83fb39d45304"
+        "outputId": "71985caf-2464-4ff9-b417-3e19ec3aeb9e"
       },
-      "execution_count": 41,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,9 +982,9 @@
           "height": 206
         },
         "id": "IVkwWyP_csWB",
-        "outputId": "432d8e6b-8db2-4e31-efb5-d9b33fdc5ed9"
+        "outputId": "1f5e8e22-f70b-4876-ebf3-bf462f4087f6"
       },
-      "execution_count": 42,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1006,7 +1006,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a035f749-26b3-4864-bb96-8ae31a5eba0e\">\n",
+              "  <div id=\"df-572d17f9-5eab-4cd6-96e5-dc582c97b68b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1095,7 +1095,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a035f749-26b3-4864-bb96-8ae31a5eba0e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-572d17f9-5eab-4cd6-96e5-dc582c97b68b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1146,12 +1146,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a035f749-26b3-4864-bb96-8ae31a5eba0e button.colab-df-convert');\n",
+              "          document.querySelector('#df-572d17f9-5eab-4cd6-96e5-dc582c97b68b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a035f749-26b3-4864-bb96-8ae31a5eba0e');\n",
+              "          const element = document.querySelector('#df-572d17f9-5eab-4cd6-96e5-dc582c97b68b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1174,7 +1174,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 38
         }
       ]
     },
@@ -1197,7 +1197,29 @@
       "metadata": {
         "id": "15BJCsvpgn0t"
       },
-      "execution_count": 43,
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Drop Price > 100000000**"
+      ],
+      "metadata": {
+        "id": "E0-WF6BktzWm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for (j,i)  in enumerate(dataset['Price'])  :\n",
+        "   if i > 100000000 :\n",
+        "      dataset.drop(j, inplace=True)"
+      ],
+      "metadata": {
+        "id": "ErYC6ce0tvKD"
+      },
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1210,9 +1232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XkoF3TyxdENA",
-        "outputId": "7f50b836-4665-4bd3-9aaa-37062f96ebfd"
+        "outputId": "5a43fc2f-e3a5-48c9-84dd-95d33967b35a"
       },
-      "execution_count": 44,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1239,7 +1261,7 @@
       "metadata": {
         "id": "8GzVAZO7dNb2"
       },
-      "execution_count": 45,
+      "execution_count": 42,
       "outputs": []
     }
   ]
