--- a/KHDL_CK/Predict.ipynb
+++ b/KHDL_CK/Predict.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "lqFFAaBW510R"
       },
@@ -54,12 +54,12 @@
       "source": [
         "watch = {\n",
         "\n",
-        "'Glass_material' : ['Sapphire Crystal']   ,\n",
-        " 'agency' : ['Epos Swiss'] ,           \n",
-        " 'Origin' : ['Thụy Sỹ']  ,         \n",
+        "'Glass_material' : ['Mineral Crystal']   ,\n",
+        " 'agency' : ['Citizen'] ,           \n",
+        " 'Origin' : ['Nhật Bản']  ,         \n",
         " 'Waterproof' :[5]   ,    \n",
-        " 'Wire_material'    : ['dây da'] ,\n",
-        "'Face_Diameter'    :[41.5],\n",
+        " 'Wire_material'    : ['thép không gỉ'] ,\n",
+        "'Face_Diameter'    :[39 ],\n",
         "'Apparatus'       :['Quartz']\n",
         "\n",
         "}"
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "9v5vx6J86CQv"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "F9e8Z4337ck2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,22 +121,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Giá điện thoại dự đoán được :\" , predict(watch))"
+        "print(\"Giá đồng hồ dự đoán được :\" , predict(watch))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kwXztohR9VHd",
-        "outputId": "2ef34dc4-a59e-4f96-8cd2-d690075c4a63"
+        "outputId": "47d811fa-4a49-43ef-f654-9fd1afd87d8a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Giá điện thoại dự đoán được : 12628092\n"
+            "Giá điện thoại dự đoán được : 3562557\n"
           ]
         }
       ]
