--- a/KHDL_CK/cleandata_ck.ipynb
+++ b/KHDL_CK/cleandata_ck.ipynb
@@ -54,7 +54,7 @@
         "id": "_at8kqO7G3DA",
         "outputId": "dbfd97a8-322d-4516-9664-e3b54a7c7d5d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "id": "Zy3LCOZ6WAoC",
         "outputId": "98a59e2c-467e-43ba-b87c-a4ee25159166"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
         "id": "BOXSEVZjKMRi",
         "outputId": "37517188-ebdf-4a46-a04b-4f7ec4a0601e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -182,7 +182,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['face_Diameter'] = data['Face_Diameter'].copy() # Creating a copy of RAM\n",
+        "data['face_Diameter'] = data['Face_Diameter'].copy() \n",
         "data['face_Diameter'].unique()\n",
         "\n",
         "print(data['face_Diameter'])"
@@ -194,7 +194,7 @@
         "id": "Yq4eMrsaLFfS",
         "outputId": "26c2b7e8-c71b-4ae7-8a4a-f3f49cc45ea3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
       "metadata": {
         "id": "TwUqGdjbLenD"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +261,7 @@
         },
         "outputId": "a528f39d-ae7d-48bf-a185-2ff7adeefe11"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +284,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['glass_material'] = data['Glass_material'].copy() # Creating a copy of RAM\n",
+        "data['glass_material'] = data['Glass_material'].copy() \n",
         "data['glass_material'].unique()\n",
         "\n",
         "print(data['glass_material'])"
@@ -296,7 +296,7 @@
         "id": "E6HfPsOQVMUR",
         "outputId": "326aef00-2bf0-4364-f7af-6abbe5631d80"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
       "metadata": {
         "id": "2qP6JBWuV-BX"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -367,7 +367,7 @@
         },
         "outputId": "46bd53ce-11da-49ee-84d5-95afc1efdf32"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['wire_material'] = data['Wire_material'].copy() # Creating a copy of RAM\n",
+        "data['wire_material'] = data['Wire_material'].copy() \n",
         "data['wire_material'].unique()\n",
         "\n",
         "print(data['wire_material'])"
@@ -402,7 +402,7 @@
         "id": "clrqGkQfbgLK",
         "outputId": "f586a03a-93bf-486d-efe5-7ae866ce4832"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
       "metadata": {
         "id": "hsu2E_ymbvcC"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -464,7 +464,7 @@
         },
         "outputId": "01c5a201-d9b3-4857-98d2-f2dac790c063"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['apparatus'] = data['Apparatus'].copy() # Creating a copy of RAM\n",
+        "data['apparatus'] = data['Apparatus'].copy() \n",
         "data['apparatus'].unique()\n",
         "\n",
         "print(data['apparatus'])"
@@ -499,7 +499,7 @@
         "id": "jfls7L70rJJT",
         "outputId": "a47459c7-1ac4-4367-f873-19c9dc35b92e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
       "metadata": {
         "id": "hmRVHoA7ngyX"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
         "id": "6bHWDLnv0Aba",
         "outputId": "f0e7b890-933e-4fc7-c297-81964298bb62"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,7 +585,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['waterproof'] = data['Waterproof'].copy() # Creating a copy of RAM\n",
+        "data['waterproof'] = data['Waterproof'].copy() \n",
         "data['waterproof'].unique()\n",
         "\n",
         "print(data['waterproof'])"
@@ -597,7 +597,7 @@
         "id": "Bu-j89gx8N5-",
         "outputId": "6b59c195-3332-4257-a52b-ab9ece6f7ac9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +642,7 @@
       "metadata": {
         "id": "WLI9rZlG8jjf"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +657,7 @@
         },
         "outputId": "2216694f-3a61-4fe3-f42e-0d4f133dde9e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +680,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['origin'] = data['Origin'].copy() # Creating a copy of RAM\n",
+        "data['origin'] = data['Origin'].copy()\n",
         "data['origin'].unique()\n",
         "\n",
         "print(data['origin'])"
@@ -692,7 +692,7 @@
         "id": "T7GltrFA_akM",
         "outputId": "991df7e0-ddce-4dfc-a398-2be98ef08df1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +734,7 @@
       "metadata": {
         "id": "TV7uutEC_szW"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -749,7 +749,7 @@
         },
         "outputId": "1dbd8039-fb3b-4013-8abf-bf389f733a50"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,7 +772,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['Agency'] = data['agency'].copy() # Creating a copy of RAM\n",
+        "data['Agency'] = data['agency'].copy() \n",
         "data['Agency'].unique()\n",
         "\n",
         "print(data['Agency'])"
@@ -784,7 +784,7 @@
         "id": "BauYcI9cCQsu",
         "outputId": "432fa961-aa70-400a-86f6-f29675d57a8d"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +830,7 @@
       "metadata": {
         "id": "LeeMxNHaCnOC"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +845,7 @@
         },
         "outputId": "c68c4a9a-ade0-4cfc-cfa3-1bbdb81baab5"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +868,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['price'] = data['Price'].copy() # Creating a copy of RAM\n",
+        "data['price'] = data['Price'].copy() \n",
         "data['price'].unique()\n",
         "\n",
         "print(data['price'])"
@@ -880,7 +880,7 @@
         "id": "X2q_sraKEQ4M",
         "outputId": "fdfadf2f-2a93-4f55-cb4b-4bf970c0fb59"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +916,7 @@
       "metadata": {
         "id": "MYojUNoUyJPC"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
       "metadata": {
         "id": "8ODJxWdQEfIG"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -947,7 +947,7 @@
         },
         "outputId": "71985caf-2464-4ff9-b417-3e19ec3aeb9e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,7 +984,7 @@
         "id": "IVkwWyP_csWB",
         "outputId": "1f5e8e22-f70b-4876-ebf3-bf462f4087f6"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1179,15 +1179,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "#**Save to CSV**"
-      ],
-      "metadata": {
-        "id": "6cCF12mhXPNP"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "dataset['Face_Diameter'] = dataset['Face_Diameter'].astype(float)\n",
@@ -1197,7 +1188,7 @@
       "metadata": {
         "id": "15BJCsvpgn0t"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1219,7 +1210,7 @@
       "metadata": {
         "id": "ErYC6ce0tvKD"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1234,7 +1225,7 @@
         "id": "XkoF3TyxdENA",
         "outputId": "5a43fc2f-e3a5-48c9-84dd-95d33967b35a"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,6 +1245,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#**Save to CSV**"
+      ],
+      "metadata": {
+        "id": "6cCF12mhXPNP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "dataset.to_csv('data_clean.csv', encoding='utf-8-sig', index=False)"
@@ -1261,7 +1261,7 @@
       "metadata": {
         "id": "8GzVAZO7dNb2"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     }
   ]
